--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,3 +27,14 @@ body {
     height: 50px;
     background-color: #222222;
 }
+
+#map-canvas{
+    width: 100%;
+    height: 400px;
+    margin-top: 30px;
+}
+
+.angular-google-map-container { 
+    height: 400px;
+    border-radius: 3px;
+}
